examples/test/testpolicy2844.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2844
  namespace: namespace346
spec:
  podSelector:
    matchLabels:
      key13: value37
      key33: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value19
          key49: value20
      podSelector:
        matchLabels:
          key28: value9
          key46: value44
          key14: value13
